--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,10 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="INKOM">
+<Layout title="Inkom">
 	<section
-		class="h-screen"
-		style="background-image: url(/public/hero-phone.png);"
+		class="h-screen bg-no-repeat"
+		style="background-image: url(/hero-phone.png);"
 	>
 		<header
 			class="header ml-[300px] mr-[300px] flex items-center mb-[180px]"
@@ -356,7 +356,7 @@ import Card from "../components/Card.astro";
 				</div>
 				<div
 					class="flex bg-no-repeat bg-cover w-[649px] bg-left h-[432px] mt-[135px]"
-					style="background-image: url(/public/sect-2.png);"
+					style="background-image: url(/sect-2.png);"
 				>
 				</div>
 			</div>
@@ -364,7 +364,7 @@ import Card from "../components/Card.astro";
 			<div class="all mb-[74px] flex">
 				<div
 					class="flex bg-no-repeat bg-cover w-[649px] bg-left h-[432px] mt-[135px]"
-					style="background-image: url(/public/sect-2.png);"
+					style="background-image: url(/sect-2.png);"
 				>
 				</div>
 				<div class="right ml-auto">
@@ -800,7 +800,7 @@ import Card from "../components/Card.astro";
 				</div>
 				<div
 					class="flex bg-no-repeat bg-cover w-[649px] bg-left h-[432px] mt-[135px]"
-					style="background-image: url(/public/sect-2.png);"
+					style="background-image: url(/sect-2.png);"
 				>
 				</div>
 			</div>
@@ -809,7 +809,7 @@ import Card from "../components/Card.astro";
 
 	<section
 		class="bg-no-repeat bg-cover"
-		style="background-image: url(/public/bg-2.png)"
+		style="background-image: url(/bg-2.png)"
 	>
 		<div
 			class="info h-[736px] w-[] mx-[300px] flex items-center justify-center"
@@ -1132,7 +1132,7 @@ import Card from "../components/Card.astro";
 						</g>
 					</svg>
 				</button>
-				<img class="object-cover" src="/public/sect-3.png" alt="hous" />
+				<img class="object-cover" src="/sect-3.png" alt="hous" />
 				<button>
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
@@ -1218,7 +1218,7 @@ import Card from "../components/Card.astro";
 
 	<section
 		class="py-[100px] bg-no-repeat bg-cover"
-		style="background-image: url(/public/bg-3.png);"
+		style="background-image: url(/bg-3.png);"
 	>
 		<div class="ml-[300px] flex flex-col items-start justify-start">
 			<h2
